Fixed bold font rendering on firefox on macOS

--- a/ui/ressources/css/main.css
+++ b/ui/ressources/css/main.css
@@ -63,6 +63,18 @@ a {
     color: blue;
     text-decoration: none;
 }
+/*Fix bold font on Firefox on macOS*/
+html {
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
+    font-smoothing: antialiased;
+    font-weight: 400;
+}
+@-moz-document url-prefix() {
+    body {
+        font-weight: lighter !important;
+    }
+}
 /*Main CSS*/
 .infotext {
     width: 100%;
